--- a/app/src/requirements.txt
+++ b/app/src/requirements.txt
@@ -7,6 +7,7 @@ contextlib2==0.6.0.post1
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
+Flask-Cors==3.0.9
 idna==2.10
 importlib-metadata==2.1.0
 importlib-resources==3.3.0
