--- a/app/src/Dockerfile
+++ b/app/src/Dockerfile
@@ -3,8 +3,8 @@ ENV PYTHONUNBUFFERED 1
 RUN mkdir /app
 WORKDIR /app
 COPY requirements.txt /app
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip3 install --upgrade pip
+RUN pip3 install -r requirements.txt
 COPY . /app
 EXPOSE 9095
-CMD [ "python", "app.py" ]
+CMD [ "python3", "app.py" ]
